--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,17 @@
 <% provide(:title, "") %>
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="center jumbotron">
+  <h1 class="home-heading">Let's sharemusic!</h1>
+  <div class="home-btn">
+    <%= link_to "Search for music", '#', class: "btn btn-border" %>
+  </div>  
+</div>
+<div class="center top-description">
+  <h1>sharemusicとは</h1>
+  <p>音楽をサブスクで聴くことが一般的になり<br>聴きたい音楽がすぐ聴ける面白い世の中になった。</p>
+  <p>しかし、お金をを貯めて、CDやレコード買う。<br>そして、聴き込む。</p>
+  <p>歌詞はもちろん<br>次に何の曲が流れるかまで完全に把握していたあの頃も面白かった。</p>
+  <p>今よりもアーティストが届けたいものを必死に理解しようとしていた。<br>そんな気がする。</p>
+  <p>聴きたい曲をいつでも聴ける便利な現代だからこそ<br>音楽について感じたこと、考えたことを文字起こしすることによって</p>
+  <p class="end-description">音楽と真剣に向き合ってみませんか？</p>
+  </p>
+</div>
