--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <header class="navbar text-white bg-dark">
+    <header class="navbar text-white bg-dark sticky-top">
       <nav class="navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="#">Sharemusic</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
