--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,9 @@
 
 $main-color: #CC66FF;
 
+html {
+  background-color: black;
+}
 /*homepage*/
 .jumbotron { 
   background:url(sharemusic_top.jpg) center no-repeat; background-size: cover;
