--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<div class="text-white bg-dark">
+<div class="text-white footer-color">
   <footer class="footer">
     <small>
       Made by Tatsuma Arakawa</a>
