fix registrations form design

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -17,7 +17,7 @@
       <%= f.password_field :password, autocomplete: "new-password", class: "field-area" %>
     </div>
 
-    <div class="field btn-remember">
+    <div class="field form-password">
       <%= f.label :password_confirmation %><br />
       <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "field-area" %>
     </div>
