--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -52,9 +52,9 @@ html {
     opacity: 0.7;
     transition: 0.2s;
   }
-  .nav-item {
+  .header-tag {
     color: white;
-    display: inline-block;
+    padding-left: 15px;
   }
 
   .nav-link {
