--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,15 +1,15 @@
 <header class="navbar text-white bg-dark sticky-top">
   <nav class="navbar navbar-expand-lg navbar-light">
-    <a class="navbar-brand" href="#">Sharemusic</a>
+    <%= link_to 'Sharemusic', new_user_session_path, class: "navbar-brand" %>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link text-white" href="#">Login</a>
+          <%= link_to 'Login', new_user_session_path, class: "header-tag" %>
         <li class="nav-item">
-          <a class="nav-link text-white" href="#">Sign in</a>
+          <%= link_to 'Sign in', new_user_registration_path, class: "header-tag" %>
       </ul>
     </div>
   </nav>
