--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,4 +1,5 @@
 <!-- 認証メールの再送信画面 -->
+<% provide(:title, "confirmations") %>
 <div class="background-color">
   <h2 class="font-color form-heading">Resend confirmation instructions</h2>
 
