--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "new") %>
 <div class="background-color">
   <h2 class="font-color form-heading">Resend unlock instructions</h2>
 
