--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "edit") %>
 <div class="background-color">
   <h2 class="font-color form-heading">Edit <%= resource_name.to_s.humanize %></h2>
 
