--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <header class="navbar text-white bg-dark sticky-top">
   <nav class="navbar navbar-expand-lg navbar-light">
-    <%= link_to 'Sharemusic', new_user_session_path, class: "navbar-brand" %>
+    <%= link_to 'Sharemusic', root_path, class: "navbar-brand" %>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
