--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,10 +6,30 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item">
-          <%= link_to 'Login', new_user_session_path, class: "header-tag" %>
-        <li class="nav-item">
-          <%= link_to 'Sign in', new_user_registration_path, class: "header-tag" %>
+        <% if user_signed_in? %>
+          <li class="nav-item">
+            <%= link_to 'My page', "#", class: "header-tag" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to 'New post', "#", class: "header-tag" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to 'Post list', "#", class: "header-tag" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to 'Logout', destroy_user_session_path, method: :delete, class: "header-tag" %>
+          </li>
+        <% else %>
+          <li class="nav-item">
+            <%= link_to 'Login', new_user_session_path, class: "header-tag" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to 'Sign in', new_user_registration_path, class: "header-tag" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to 'Post list', "#", class: "header-tag" %>
+          </li>
+        <% end %>
       </ul>
     </div>
   </nav>
