--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -113,6 +113,12 @@ footer {
 }
 
 /*form*/
+.form-username {
+  text-align: center;
+  color: white;
+  margin-bottom: 30px;
+}
+
 .form-email {
   text-align: center;
   color: white;
@@ -140,6 +146,7 @@ footer {
   margin-bottom: 50px;
   .submit-btn {
     width: 30%;
+    margin-top: 30px;
     color: white;
     background-color: gray;
     border-radius: 3px;
@@ -149,6 +156,7 @@ footer {
 .form-heading {
   text-align: center;
   padding-top: 50px;
+  padding-bottom: 30px;
 }
 
 /*shared-links*/
