--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,6 +5,11 @@
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= render "devise/shared/error_messages", resource: resource %>
 
+    <div class="field form-username">
+      <%= f.label :username %><br />
+      <%= f.email_field :username, autofocus: true, autocomplete: "username", class: "field-area" %>
+    </div>
+
     <div class="field form-email">
       <%= f.label :email %><br />
       <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "field-area" %>
