fix registrations form

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,7 +7,7 @@
 
     <div class="field form-username">
       <%= f.label :username %><br />
-      <%= f.email_field :username, autofocus: true, autocomplete: "username", class: "field-area" %>
+      <%= f.text_field :username, autofocus: true, autocomplete: "username", class: "field-area" %>
     </div>
 
     <div class="field form-email">
