--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
       <ul class="navbar-nav">
         <% if user_signed_in? %>
           <li class="nav-item">
-            <%= link_to 'My page', "#", class: "header-tag" %>
+            <%= link_to 'My page', users_path, class: "header-tag" %>
           </li>
           <li class="nav-item">
             <%= link_to 'New post', "#", class: "header-tag" %>
