--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,5 @@
-<h1>マイページ</h1>
+<% provide(:title, @user.username) %>
+<div class="main-color">
+  <%= @user.username %>                                                      
+  <%= image_tag @user.image.url, class: "icon-image" %>
+</div>
