--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, "edit") %>
-<div class="background-color">
+<div class="background-color registrations-edit">
   <h2 class="font-color form-heading">Edit <%= resource_name.to_s.humanize %></h2>
 
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
@@ -19,21 +19,21 @@
       <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
     <% end %>
 
-    <div class="field form-emails">
+    <div class="field form-password">
       <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-      <%= f.password_field :password, autocomplete: "new-password", class: "ield-area" %>
+      <%= f.password_field :password, autocomplete: "new-password", class: "field-area" %>
       <% if @minimum_password_length %>
         <br />
         <em><%= @minimum_password_length %> characters minimum</em>
       <% end %>
     </div>
 
-    <div class="field　form-password">
+    <div class="field form-password">
       <%= f.label :password_confirmation %><br />
       <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "field-area" %>
     </div>
 
-    <div class="field　form-password">
+    <div class="field form-password">
       <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
       <%= f.password_field :current_password, autocomplete: "current-password", class: "field-area" %>
     </div>
@@ -43,9 +43,10 @@
     </div>
   <% end %>
 
-  <h3 class="font-color">Cancel my account</h3>
+  <h3 class="font-color text-center">Cancel my account</h3>
 
-  <p　lass="font-color">Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-  <%= link_to "Back", :back %>
+  <div class="text-center">
+    <p class="font-color text-center">Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "delete-btn" %></p>
+  </div>
+  <%= link_to "Back", :back, class: "back-btn" %>
 </div>
