--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,13 +8,10 @@
       <ul class="navbar-nav">
         <% if user_signed_in? %>
           <li class="nav-item">
-            <%= link_to 'My page', users_path, class: "header-tag" %>
+            <%= link_to 'My page', current_user, class: "header-tag" %>
           </li>
           <li class="nav-item">
             <%= link_to 'New post', "#", class: "header-tag" %>
-          </li>
-          <li class="nav-item">
-            <%= link_to 'Post list', pages_index_path, class: "header-tag" %>
           </li>
           <li class="nav-item">
             <%= link_to 'Logout', destroy_user_session_path, method: :delete, class: "header-tag" %>
