--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,8 @@
 @import "bootstrap";
 
-$main-color: #CC66FF;
+$main-color: #EEEEEE;
+$sub-color: #888888;
+
 html {
   background-color: black;
 }
@@ -10,12 +12,14 @@ html {
 }
 
 .main-color {
-  background-color: #CCCCCC;
+  background-color: $main-color;
 }
 
 .font-color {
   color: white;
 }
+
+
 /*homepage*/
 .jumbotron { 
   background:url(sharemusic_top.jpg) center no-repeat; background-size: cover;
@@ -25,6 +29,7 @@ html {
     opacity: 0.8;
     text-align: center;
   }
+
   .home-btn {
     text-align: center;
     margin-top: 250px;
@@ -52,11 +57,13 @@ html {
     font-family: 'Noto Sans JP', sans-serif;
     color: white;
   }
+
   .navbar-brand:hover{
     color: white;
     opacity: 0.7;
     transition: 0.2s;
   }
+
   .header-tag {
     color: white;
     padding-left: 15px;
@@ -85,12 +92,13 @@ html {
   padding-top: 80px;
   padding-bottom: 80px;
   h1 {
-    color: $main-color;
+    color: #CC66FF;
     text-align: center;
     padding-bottom: 30px;
     font-family: 'M PLUS Rounded 1c', sans-serif;
     font-weight: bold;
   }
+
   p {
     color: white;
     text-align: center;
@@ -100,6 +108,7 @@ html {
     padding-top: 15px;
     font-family: 'Noto Sans JP', sans-serif;
   }
+
   .end-description{
     padding-top: 20px;
     font-size: 1.3em;
@@ -116,6 +125,7 @@ footer {
 .footer-color {
   background-color: black;
 }
+
 
 /*form*/
 .form-username {
@@ -137,6 +147,12 @@ footer {
 }
 
 .form-image {
+  text-align: center;
+  color: white;
+  margin-bottom: 30px;
+}
+
+.form-introduce {
   text-align: center;
   color: white;
   margin-bottom: 30px;
@@ -183,11 +199,13 @@ footer {
   padding-bottom: 100px;
 }
 
+
 /*shared-links*/
 .shared-links{
   margin-left: 34%;
   padding-bottom: 100px;
 }
+
 
 /*error*/
 .alert {
@@ -199,12 +217,46 @@ footer {
   color: $main-color;
 }
 
+
 /*users/show*/
 .profile-image {
   width: 100px;
   height: 100px;
   border-radius: 100px;
   object-fit: cover;
+}
+
+.user-profile {
+  padding-top: 20px;
+  h5 {
+    padding-top: 20px;
+  }
+}
+
+.show-username {
+  padding-top: 30px;
+}
+
+.show-image {
+
+}
+
+.show-introduce {
+  margin-top: 5px;
+  background-color: white;
+  border-radius: 10px;
+  padding: 5px 5px;
+  max-width: 800px;
+  p {
+    margin: 0;
+  }
+}
+
+.show-profile-setting {
+  padding: 10px 0 30px 0;
+  .profile-setting{
+    color: $sub-color;
+  }
 }
 
 @media screen and (max-width: 1024px){
