--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -245,7 +245,7 @@ footer {
   margin-top: 5px;
   background-color: white;
   border-radius: 10px;
-  padding: 5px 5px;
+  padding: 10px 5px 10px 5px;
   max-width: 800px;
   p {
     margin: 0;
