--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,10 +8,12 @@
       <div class="show-image">                                                     
         <%= image_tag @user.image.url, class: "profile-image" %>
       </div>
-      <h5>自己紹介</h5>
-      <div class="show-introduce">
-        <%= simple_format(@user.introduce) %>
-      </div>
+      <% if @user.introduce.present? %>
+        <h5>自己紹介</h5>
+        <div class="show-introduce">
+          <%= simple_format(@user.introduce) %>
+        </div>
+      <% end %>
       <% if current_user == @user %>
         <div class="show-profile-setting">
           <%= link_to "Profile settings", edit_user_registration_path, class: "profile-setting"  %>
