add Login as a guest user

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,7 +5,7 @@
   <div class="center jumbotron">
     <h1 class="home-heading">Let's sharemusic!</h1>
     <div class="home-btn">
-      <%= link_to "Login as a guest user", "#", class: "btn btn-border" %>
+      <%= link_to "Login as a guest user", users_guest_sign_in_path, method: :post, class: "btn btn-border" %>
     </div>  
   </div>
   <div class="center top-description">
