--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -259,7 +259,14 @@ footer {
   }
 }
 
-@media screen and (max-width: 1024px){
+@media screen and (max-width: 992px){
+  .nav-item {
+    padding-top: 5px;
+    .header-tag {
+      padding-left: 0;
+    }
+  }
+
   .field-area {
     width: 40%;
   }
@@ -284,7 +291,7 @@ footer {
   }
 }
 
-@media screen and (max-width: 680px){
+@media screen and (max-width: 768px){
   .top-description {
     p {
       font-size: 12px;
