--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,6 +11,12 @@
             <%= link_to 'マイページ', current_user, class: "header-tag" %>
           </li>
           <li class="nav-item">
+            <%= link_to 'ユーザー一覧', "#", class: "header-tag" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to 'フォロー投稿一覧', "#", class: "header-tag" %>
+          </li>
+          <li class="nav-item">
             <%= link_to '新規投稿', "#", class: "header-tag" %>
           </li>
           <li class="nav-item">
