--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, "") %>
 <% if user_signed_in? %>
-  <h1>フォローしているユーザーの投稿一覧ページ</h1>
+  <h1>全ユーザー投稿一覧ページ</h1>
 <% else %>
   <div class="center jumbotron">
     <h1 class="home-heading">Let's sharemusic!</h1>
