add comment function

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,6 +11,14 @@ html {
   background-color: black;
 }
 
+.background-maincolor {
+  background-color: $main-color;
+}
+
+.font-subcolor {
+  color: $sub-color;
+}
+
 .main-color {
   background-color: $main-color;
 }
