--- a/app/views/album_boards/show.html.erb
+++ b/app/views/album_boards/show.html.erb
@@ -1,8 +1,15 @@
-<div>
-  <div>
-    <%= @albumboard.albums %>
+<div class="background-maincolor">
+  <div class="container">
+    <div >
+      <%= @albumboard.albums %>
+    </div>
+    <div>
+      <%= image_tag "#{@albumboard.icon}",:size =>'500x500' %>
+    </div>
   </div>
   <div>
-    <%= image_tag "#{@albumboard.icon}",:size =>'500x500' %>
+    <h5>コメント一覧<h5>
+    <%= render 'board_reviews/index' %>
+    <%= render 'board_reviews/form' %>
   </div>
 <div>
