--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,20 @@
 <% provide(:title, "") %>
 <% if user_signed_in? %>
-  <h1>全ユーザー投稿一覧ページ</h1>
+  <div class="background-maincolor">
+    <div class="container">
+      <h2>レビューページ一覧</h2>
+      <div class="row row-cols-1 row-cols-md-4">
+        <% @albumboards.each do |albumboard| %>
+          <div class="col-lg-3 mb-4 d-flex justify-content-center">
+            <div>
+              <p><%= albumboard.albums %></p>
+              <%= image_tag "#{albumboard.icon}",:size =>'242x242' %>
+            </div>
+          </div>
+        <% end %>
+      </div>
+    </div>
+  </div>
 <% else %>
   <div class="center jumbotron">
     <h1 class="home-heading">Let's sharemusic!</h1>
