--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,13 @@
-<h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
+<% provide(:title, "ユーザー一覧") %>
+<h1>ユーザー一覧</h1>
+
+<%= search_form_for @q do |f| %>
+ <%= f.label :username, "ユーザー検索" %>
+ <%= f.search_field :username_cont %>
+ <%= f.submit "検索" %>
+<% end %>
+
+<ul>
+  <%= render @users %>
+</ul>
+<%= will_paginate %>
