--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,6 +14,10 @@
           <%= simple_format(@user.introduce) %>
         </div>
       <% end %>
+      <%= render 'follow_form' if user_signed_in? %>
+      <section class="stats">
+        <%= render 'shared/stats' %>
+      </section>
       <% if current_user == @user %>
         <div class="show-profile-setting">
           <%= link_to "Profile settings", edit_user_registration_path, class: "profile-setting"  %>
