--- a/app/views/board_reviews/_form.html.erb
+++ b/app/views/board_reviews/_form.html.erb
@@ -1,10 +1,25 @@
-<div>
-  <%= form_with(model: [@albumboard, @boardreview], local: true) do |f| %>
-    <div>
-      <%= f.text_area :content %>
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+  レビューを作成する
+</button>
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">このアルバムを聴いてどう感じましたか？</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <%= form_with(model: [@albumboard, @boardreview], local: true) do |f| %>
+          <div>
+            <%= f.text_area :content %>
+          </div>
+          <div>
+            <%= f.submit "投稿する" %>
+          </div>
+        <% end %>
+      </div>
     </div>
-    <div>
-      <%= f.submit "投稿する" %>
-    </div>
-  <% end %>
+  </div>
 </div>
