--- a/app/views/board_reviews/_form.html.erb
+++ b/app/views/board_reviews/_form.html.erb
@@ -10,8 +10,19 @@
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <div class="modal-body">
+      <div class="modal-body rating-box">
         <%= form_with(model: [@albumboard, @boardreview], local: true) do |f| %>
+          <div class="main-rating">
+            <div class="ratings mb-3">
+              <span class="fa fa-star-o" id="star"></span>
+              <span class="fa fa-star-o" id="star"></span>
+              <span class="fa fa-star-o" id="star"></span>
+              <span class="fa fa-star-o" id="star"></span>
+              <span class="fa fa-star-o" id="star"></span>
+            </div>
+            <div class="ml-3 rating-value-display"><span id="rating-value-display">0</span>/5</div>
+          </div>
+          <%= f.hidden_field :score, id: "rating-value" %>
           <div>
             <%= f.text_area :content %>
           </div>
@@ -23,3 +34,5 @@
     </div>
   </div>
 </div>
+
+<%= javascript_include_tag 'board_reviews.js' %>
