--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
       <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/r29/html5.min.js">
       </script>
     <![endif]-->
+    <script src="https://kit.fontawesome.com/3655f8643a.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
