--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,22 +1,6 @@
 <% provide(:title, "") %>
 <% if user_signed_in? %>
-  <div class="background-maincolor">
-    <div class="container">
-      <h2>レビューページ一覧</h2>
-      <div class="row row-cols-1 row-cols-md-4">
-        <% @albumboards.each do |albumboard| %>
-          <div class="col-lg-3 mb-4 d-flex justify-content-center">
-            <div>
-              <%= link_to album_board_path(albumboard.id) do %>
-                <p><%= albumboard.albums %></p>
-                <%= image_tag "#{albumboard.icon}",:size =>'242x242' %>
-              <% end %>
-            </div>
-          </div>
-        <% end %>
-      </div>
-    </div>
-  </div>
+  <%= render partial: 'index', locals: { albumboards: @albumboards } %>
 <% else %>
   <div class="center jumbotron">
     <h1 class="home-heading">Let's sharemusic!</h1>
