--- a/app/views/board_reviews/_form.html.erb
+++ b/app/views/board_reviews/_form.html.erb
@@ -2,7 +2,7 @@
   レビューを作成する
 </button>
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
+  <div class="modal-dialog modal-review" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="exampleModalLabel">このアルバムを聴いてどう感じましたか？</h5>
@@ -12,7 +12,7 @@
       </div>
       <div class="modal-body rating-box">
         <%= form_with(model: [@albumboard, @boardreview], local: true) do |f| %>
-          <div class="main-rating">
+          <div class="main-rating album-rating">
             <div class="ratings mb-3">
               <span class="fa fa-star-o" id="star"></span>
               <span class="fa fa-star-o" id="star"></span>
@@ -23,8 +23,13 @@
             <div class="ml-3 rating-value-display"><span id="rating-value-display">0</span>/5</div>
           </div>
           <%= f.hidden_field :score, id: "rating-value" %>
+          <p>タイトル</p>
           <div>
-            <%= f.text_area :content %>
+            <%= f.text_field :title, class: "text-field-review" %>
+          </div>
+          <p>本文</p>
+          <div>
+            <%= f.text_area :content, class: "text-area-review" %>
           </div>
           <div>
             <%= f.submit "投稿する" %>
