--- a/app/views/board_reviews/_index.html.erb
+++ b/app/views/board_reviews/_index.html.erb
@@ -1,23 +1,28 @@
-<div class="average-score-display ml-3 pt-2">
-  平均<%= @albumboard.avg_score %>点（<%= @albumboard.board_reviews.count %>件のレビュー）
-</div>
-<div class="star-rating mb-2">
-  <div class="star-rating-front" style="width: <%= @albumboard.board_review_score_percentage %>%">★★★★★</div>
-  <div class="star-rating-back">★★★★★</div>
-</div>
-<% @boardreviews.each do |boardreview| %>
-  <%= link_to user_path(boardreview.user.id) do %>
-    <div>
-      <p><%= boardreview.user.username %></p>
-      <%= image_tag "#{boardreview.user.image}", :size =>'30x30' %>
+<div>
+  <h5 class="reviews-index-heading">レビュー一覧</h5>
+  <% @boardreviews.each do |boardreview| %>
+    <div class="main-color review">
+      <div class="review-content">
+        <div class="review-top">
+          <%= link_to user_path(boardreview.user.id) do %>
+            <div class="review-user">
+              <%= image_tag "#{boardreview.user.image}", :size =>'35x35', class: "review-user-image" %>
+              <p><%= boardreview.user.username %></p>
+            </div>
+          <% end %>
+          <div class="review-title">
+            <p class="font-weight-bold"><%= boardreview.title %></p>
+          </div>
+          <small>評価: <%= boardreview.score %>/5</small>
+        </div>
+        <div>
+          <p><%= simple_format(boardreview.content) %></p>
+        </div>
+        <% if current_user? boardreview.user %>
+          <%= link_to "レビューを削除", album_board_board_review_path(boardreview.album_board.albums, boardreview.id), method: :delete,
+          data: { confirm: "本当に削除しますか？" } %>
+        <% end %>
+      </div>
     </div>
-  <% end %>
-  <p>評価: <%= boardreview.score %>/5</p>
-  <div>
-    <p><%= boardreview.content %></p>
-  </div>
-  <% if current_user? boardreview.user %>
-    <%= link_to "レビューを削除", album_board_board_review_path(boardreview.album_board.albums, boardreview.id), method: :delete,
-    data: { confirm: "本当に削除しますか？" } %>
-  <% end %>
-<% end %> 
+  <% end %> 
+</div>
