--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,6 +14,9 @@
             <%= link_to 'ユーザー一覧', users_path, class: "header-tag" %>
           </li>
           <li class="nav-item">
+            <%= link_to 'レビューページ一覧', root_path, class: "header-tag" %>
+          </li>
+          <li class="nav-item">
             <%= link_to 'アルバムを探す', search_album_boards_path, class: "header-tag" %>
           </li>
           <li class="nav-item">
