--- a/app/views/album_boards/new.html.erb
+++ b/app/views/album_boards/new.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "create") %>
 <div class="row d-flex justify-content-center">
   <%= form_with(model: @albumboard, local: true) do |f| %>
     <%= f.label :アルバム名 %>
