--- a/app/views/album_boards/search.html.erb
+++ b/app/views/album_boards/search.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "search") %>
 <section class="text-center py-5 main-color">
   <div class="row d-flex justify-content-center ">
     <div class="col-md-9 col-lg-7 col-xl-5">
