--- a/app/views/album_boards/show.html.erb
+++ b/app/views/album_boards/show.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, @albumboard.albums) %>
 <div class="background-color">
   <div class="container">
     <div class="row show-album-information"> 
