--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,13 +1,18 @@
 <% provide(:title, "ユーザー一覧") %>
-<h1>ユーザー一覧</h1>
-
-<%= search_form_for @q do |f| %>
- <%= f.label :username, "ユーザー検索" %>
- <%= f.search_field :username_cont %>
- <%= f.submit "検索" %>
-<% end %>
-
-<ul>
-  <%= render @users %>
-</ul>
-<%= will_paginate %>
+<div class="background-color">
+  <div class="container">
+    <h1 class="text-center user-index-heading">ユーザー一覧</h1>
+    <div>
+      <%= search_form_for @q do |f| %>
+        <div class="user-index-search-form">
+          <%= f.label :username, "ユーザー検索" %>
+          <%= f.search_field :username_cont, class: "user-index-field" %>
+          <%= f.submit "検索" %>
+        </div>
+      <% end %>
+    </div>
+    <ul class="users-profile">
+      <%= render @users %>
+    </ul>
+  </div>
+</div>
