--- a/app/views/album_boards/search.html.erb
+++ b/app/views/album_boards/search.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, "search") %>
-<section class="text-center py-5 main-color">
-  <div class="row d-flex justify-content-center ">
+<section class="text-center main-color search-page">
+  <div class="row d-flex justify-content-center background-color album-search-form">
     <div class="col-md-9 col-lg-7 col-xl-5">
       <h2 class="font-weight-bold pb-4">アルバム検索</h2>
 
