--- a/app/views/users/show_follow.html.erb
+++ b/app/views/users/show_follow.html.erb
@@ -1,21 +1,25 @@
 <% provide(:title, @title) %>
-<div class="row">
-  <aside class="col-md-4">
-    <section class="user_info">
-      <h1><%= @user.username %></h1>
-      <span><%= link_to "view my profile", @user %></span>
-    </section>
-    <section class="stats">
-      <%= render 'shared/stats' %>
-    </section>
-  </aside>
-  <div class="col-md-8">
-    <h3><%= @title %></h3>
-    <% if @users.any? %>
-      <ul class="users follow">
-        <%= render @users %>
-      </ul>
-      <%= will_paginate %>
-    <% end %>
+<div class="background-color">
+  <div class="container">
+    <div class="row">
+      <aside class="col-lg-12">
+        <section class="user_info">
+          <%= image_tag @user.image.url, :size =>'40x40', class: "follow-user-image" %>
+          <h2><%= @user.username %></h2>
+        </section>
+        <section class="stats">
+          <%= render 'shared/stats' %>
+        </section>
+      </aside>
+      <div class="col-lg-12 follow-users">
+        <h3><%= @title %></h3>
+        <% if @users.any? %>
+          <ul class="users follow">
+            <%= render @users %>
+          </ul>
+          <%= will_paginate %>
+        <% end %>
+      </div>
+    </div>
   </div>
 </div>
