--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -279,6 +279,21 @@ footer {
   }
 }
 
+.user-reviews {
+  padding: 10px;
+  border-radius: 5px;
+  margin-top: 20px;
+}
+
+.user-paginate {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.user-review-heading {
+  border-bottom:  #CCCCCC solid 1px;
+}
+
 
 
 /*board_reviews/_form*/
@@ -517,6 +532,10 @@ footer {
 
 .follow-users {
   padding-bottom: 50px;
+  h3 {
+    text-align: center;
+    padding-top: 50px;
+  }
 }
 
 
