--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,26 +1,26 @@
 <% provide(:title, "edit") %>
 <div class="background-color">
-  <h2 class="font-color form-heading">Change your password</h2>
+  <h2 class="font-color form-heading">パスワード再設定</h2>
 
   <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
     <%= render "devise/shared/error_messages", resource: resource %>
     <%= f.hidden_field :reset_password_token %>
 
     <div class="field form-password">
-      <%= f.label :password, "New password" %><br />
+      <%= f.label :password, "新しいパスワード(必須)" %><br />
       <% if @minimum_password_length %>
-        <em>(<%= @minimum_password_length %> characters minimum)</em><br />
+        <em>(<%= @minimum_password_length %>文字以上)</em><br />
       <% end %>
       <%= f.password_field :password, autofocus: true, autocomplete: "new-password", class: "field-area" %>
     </div>
 
     <div class="field form-password">
-      <%= f.label :password_confirmation, "Confirm new password" %><br />
+      <%= f.label "確認用パスワード", "Confirm new password" %><br />
       <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "field-area" %>
     </div>
 
     <div class="actions">
-      <%= f.submit "Change my password", class: "submit-btn" %>
+      <%= f.submit "パスワードを変更する", class: "submit-btn" %>
     </div>
   <% end %>
 
