--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,17 +1,17 @@
 <% provide(:title, "new") %>
 <div class="background-color">
-  <h2 class="font-color form-heading">Forgot your password?</h2>
+  <h2 class="font-color form-heading">パスワードをお忘れですか？</h2>
 
   <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
     <%= render "devise/shared/error_messages", resource: resource %>
 
     <div class="field form-email">
-      <%= f.label :email %><br />
+      <%= f.label "メールアドレス" %><br />
       <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "field-area" %>
     </div>
 
     <div class="actions">
-      <%= f.submit "Send me reset password instructions", class: "submit-btn" %>
+      <%= f.submit "確認用メールを送信する", class: "submit-btn" %>
     </div>
   <% end %>
 
