--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,22 +1,22 @@
 <% provide(:title, "edit") %>
 <div class="background-color registrations-edit">
-  <h2 class="font-color form-heading">Edit <%= resource_name.to_s.humanize %></h2>
+  <h2 class="font-color form-heading">プロフィール変更</h2>
 
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
     <%= render "devise/shared/error_messages", resource: resource %>
 
     <div class="field form-username">
-      <%= f.label :username %><br />
+      <%= f.label "ユーザーネーム" %><br />
       <%= f.text_field :username, autofocus: true, autocomplete: "username", class: "field-area" %>
     </div>
 
     <div class="field form-introduce">
-      <%= f.label :introduce %><br />
+      <%= f.label "自己紹介" %><br />
       <%= f.text_area :introduce, autofocus: true, class: "field-area" %>
     </div>
 
     <div class="field form-email">
-      <%= f.label :email %><br />
+      <%= f.label "メールアドレス" %><br />
       <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "field-area" %>
     </div>
 
@@ -25,38 +25,38 @@
     <% end %>
 
     <div class="field form-password">
-      <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+      <%= f.label "パスワード" %> <i>(変更したくない場合は空欄)</i><br />
       <%= f.password_field :password, autocomplete: "new-password", class: "field-area" %>
       <% if @minimum_password_length %>
         <br />
-        <em><%= @minimum_password_length %> characters minimum</em>
+        <em><%= @minimum_password_length %>文字以上</em>
       <% end %>
     </div>
 
     <div class="field form-password">
-      <%= f.label :password_confirmation %><br />
+      <%= f.label "確認用パスワード" %><br />
       <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "field-area" %>
     </div>
 
-    <div class="field form-password">
-      <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-      <%= f.password_field :current_password, autocomplete: "current-password", class: "field-area" %>
-    </div>
-
     <div class="field form-image">
-      <%= f.label :image %><br />
+      <%= f.label "プロフィール画像" %><br />
       <%= f.file_field :image, class: "field-area" %>
     </div>
 
+    <div class="field form-password">
+      <%= f.label "現在のパスワード" %> <i>(ユーザー情報を変更するためには現在のパスワードを入力してください)</i><br />
+      <%= f.password_field :current_password, autocomplete: "current-password", class: "field-area" %>
+    </div>
+
     <div class="actions">
-      <%= f.submit "Update", class: "submit-btn"  %>
+      <%= f.submit "変更する", class: "submit-btn"  %>
     </div>
   <% end %>
 
-  <h3 class="font-color text-center">Cancel my account</h3>
+  <h3 class="font-color text-center">ユーザー削除</h3>
 
   <div class="text-center">
-    <p class="font-color text-center">Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "delete-btn" %></p>
+    <p class="font-color text-center"><%= button_to "ユーザーを削除する", registration_path(resource_name), data: { confirm: "本当に削除しますか？" }, method: :delete, class: "delete-btn" %></p>
   </div>
-  <%= link_to "Back", :back, class: "back-btn" %>
+  <%= link_to "戻る", :back, class: "back-btn" %>
 </div>
