--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,6 +1,6 @@
 <li class="user-index-profile">
   <div class="user-index-profile-content">
     <%= image_tag user.image.url, :size =>'50x50', class: "users-index-user-image" %>
-    <%= link_to user.username, user, class: "users-index-username" %>
+    <%= link_to user.username, user, class: "users-index-username btn-hover" %>
   </div> 
 </li>
